// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestStepLink renders with index 1`] = `
<div
  aria-hidden="true"
  className="button-flex-container"
>
  <div
    className="ms-Button-label req-description"
  >
    <span
      className="req-index"
    >
      5
    </span>
    <span
      className="req-name"
    >
      Link with index name
      .
    </span>
    <span>
      Link with index description
    </span>
  </div>
  <StatusIcon
    status={0}
  />
</div>
`;

exports[`TestStepLink renders without index 1`] = `
<div
  aria-hidden="true"
  className="button-flex-container"
>
  <div
    className="ms-Button-label req-description"
  >
    <span
      className="req-name"
    >
      Link without index name
      .
    </span>
    <span>
      Link without index description
    </span>
  </div>
  <StatusIcon
    status={0}
  />
</div>
`;
